Pricelist download added to footer

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
                 </div>
                 <div class="row video-style">
                     <div id="video-padding" class="col-xs-12 col-sm-6 col-md-6">
-                      <div class="video-container ">
-                         <iframe class="video-border" width="560" height="315" src="https://www.youtube.com/embed/MgTSfJEf_jM?rel=0&amp;showinfo=0"></iframe>
-                      </div>
+                        <div class="video-container ">
+                            <iframe class="video-border" width="560" height="315" src="https://www.youtube.com/embed/MgTSfJEf_jM?rel=0&amp;showinfo=0"></iframe>
+                        </div>
                     </div>
-                    <div  class="col-xs-12 col-sm-6 col-md-6">
-                      <div class="video-container">
-                         <iframe class="video-border" width="560" height="315" src="https://www.youtube.com/embed/Q3mgapAcVdU?rel=0&amp;showinfo=0"></iframe>
-                      </div>
+                    <div class="col-xs-12 col-sm-6 col-md-6">
+                        <div class="video-container">
+                            <iframe class="video-border" width="560" height="315" src="https://www.youtube.com/embed/Q3mgapAcVdU?rel=0&amp;showinfo=0"></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -84,8 +84,7 @@
             <div class="col-sm-4">
                 <h6 class="uppercase general-styles">About us</h6>
 
-                <p class="inline-block font-style"><a class="wiki-link" href="http://bit.ly/2CqYnai" target="_blank">Legendary</a> rock and roll & rhythm and blues band, 50+ years experience,
-                with a back catalogue of original classic hits.
+                <p class="inline-block font-style"><a class="wiki-link" href="http://bit.ly/2CqYnai" target="_blank">Legendary</a> rock and roll & rhythm and blues band, 50+ years experience, with a back catalogue of original classic hits.
                 </p>
 
             </div>
@@ -93,7 +92,7 @@
                 <h6 class="uppercase general-styles">Pricelist & Schedule</h6>
 
                 <p class="inline-block font-style">Here is a list of our prices and availability throughout the year. Please download it here
-                    <a href="#" class="list-pdf"><i class="fa fa-download" aria-hidden="true"></i></a>
+                    <a class="list-pdf" <a href="assets/documents/pricelist.pdf" target="_blank" ><i class="fa fa-download" aria-hidden="true"></i></a>
                 </p>
             </div>
             <div class="col-sm-4">
