General clean up of css and some minor changes to the userface

--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,8 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-8 bg-color-contact section-column">
                 <div class="row contact-styles">
-                    <div class="section-heading-contact">
-                        <h3 class="contact-heading uppercase text-center">Got a special event coming up?</h3>
+                    <div>
+                        <h3 class="section-heading-contact uppercase text-center">Got a special event coming up?</h3>
                         <h5 class="uppercase text-center">Make a booking here</h5>
                     </div>
                     <div class="center-form">
@@ -76,7 +76,7 @@
             <div class="col-sm-4">
                 <h6 class="uppercase general-styles">Pricelist & Schedule</h6>
 
-                <p class="inline-block font-style">Here is a list of our prices and availability throughout the year. Please download it here
+                <p class="inline-block font-style">Here is a list of our prices and availability throughout the year. Please click on the link
                     <a class="list-pdf" <a href="assets/documents/pricelist.pdf" target="_blank" ><i class="fa fa-download" aria-hidden="true"></i></a>
                 </p>
             </div>
