--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="col-sm-4">
                 <h6 class="uppercase general-styles">Pricelist & Schedule</h6>
 
-                <p class="inline-block font-style">Here is a list of our prices and availability throughout the year. Please download it here
+                <p class="inline-block font-style">Here is a list of our prices and availability throughout the year. Please click on the link
                     <a class="list-pdf" <a href="assets/documents/pricelist.pdf" target="_blank" ><i class="fa fa-download" aria-hidden="true"></i></a>
                 </p>
             </div>
