General clean up throughout the website.Added some new media queries on the music and customers pages to increase responsiveness. Added some shadow box to images inthe info sections and a transition for the audio images and audio bars on the music page.re-named some ids and classes and completed some minor re-styling to improve the visual appeal of the user interface

--- a/contact.html
+++ b/contact.html
@@ -39,11 +39,10 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-           <div class="col-xs-12 col-sm-12 col-md-4 bg-color-contact-info section-column">
+            <div class="col-xs-12 col-sm-12 col-md-4 bg-color-contact-info section-column">
                 <div>
                     <p>
-                <img class="picture-contact-info" src="assets/images/a-contact-image.jpg" alt="Rock and Roll Hall of Fame logo." 
-                    </p>
+                        <img class="picture-contact-info" src="assets/images/a-contact-image.jpg" alt="Rock and Roll Hall of Fame logo." </p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-8 bg-color-contact section-column">
@@ -77,7 +76,7 @@
                 <h6 class="uppercase general-styles">Pricelist & Schedule</h6>
 
                 <p class="inline-block font-style">Here is a list of our prices and availability throughout the year. Please click on the link
-                    <a class="list-pdf" <a href="assets/documents/pricelist.pdf" target="_blank" ><i class="fa fa-download" aria-hidden="true"></i></a>
+                    <a class="list-pdf" <a href="assets/documents/pricelist.pdf" target="_blank"><i class="fa fa-download" aria-hidden="true"></i></a>
                 </p>
             </div>
             <div class="col-sm-4">
