--- a/customers.html
+++ b/customers.html
@@ -48,7 +48,7 @@
                 <div class="band-customers-item">
                     <p>Over the years we have worked with many wonderful <strong>animal welfare</strong> organisations, through regular <strong>donations</strong> and <strong>advocating</strong> on their behalf.
                         <a href="https://www.worldanimalprotection.org/" target="_blank"><img class="picture-customers-info" 
-                    src="assets/images/happy-wolf.jpeg" alt="picture of a happy wolf" 
+                    src="assets/images/happy-wolf.jpeg" alt="picture of a happy wolf"
                      /></a> You can visit one of our favorite animal charities by clicking on this image.
                     </p>
                     <p>
@@ -69,7 +69,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-6">
                         <div class="media">
                             <div class="media-left">
-                                <img src="assets/images/sam-harris.jpg" alt="Image of Sam Harris" class="img-circle media-object" height=100 width=100>
+                                <img id="hidden-xxs" src="assets/images/sam-harris.jpg" alt="Image of Sam Harris" class="img-circle media-object shadow-box" height=100 width=100>
                             </div>
                             <div class="media-body">
                                 <blockquote class="band-customers-item">
@@ -85,7 +85,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-6 hidden-sm">
                         <div class="media">
                             <div class="media-left">
-                                <img src="assets/images/gabor-mate.jpg" alt="Image of Gabor Mate" class="img-circle media-object" height=100 width=100>
+                                <img id="hidden-xxs" src="assets/images/gabor-mate.jpg" alt="Image of Gabor Mate" class="img-circle media-object shadow-box" height=100 width=100>
                             </div>
                             <div class="media-body">
                                 <blockquote class="band-customers-item">
@@ -99,7 +99,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-6 hidden-xs">
                         <div class="media">
                             <div class="media-left">
-                                <img src="assets/images/jordan-peterson.jpg" alt="Image of Jordan Peterson" class="img-circle media-object" height=100 width=100>
+                                <img src="assets/images/jordan-peterson.jpg" alt="Image of Jordan Peterson" class="img-circle media-object shadow-box" height=100 width=100>
                             </div>
                             <div class="media-body">
                                 <blockquote class="band-customers-item">
@@ -128,7 +128,7 @@
                 <h6 class="uppercase general-styles">Pricelist & Schedule</h6>
 
                 <p class="inline-block font-style">Here is a list of our prices and availability throughout the year. Please click on the link
-                    <a class="list-pdf" <a href="assets/documents/pricelist.pdf" target="_blank" ><i class="fa fa-download" aria-hidden="true"></i></a>
+                    <a class="list-pdf" <a href="assets/documents/pricelist.pdf" target="_blank"><i class="fa fa-download" aria-hidden="true"></i></a>
                 </p>
             </div>
             <div class="col-sm-4">
