--- a/music.html
+++ b/music.html
@@ -48,11 +48,12 @@
                 <div class="band-music-item">
                     <a href="http://bit.ly/2tlWSGS" target="_blank"><img class="picture-music-info" 
                     src="assets/images/eric-burdon-1.jpeg" alt="picture of Eric Burden" 
-                    style="width:167px;height:130px;" /></a>
+                   /></a>
 
                     <p>Please click on this image to listen to the recent solo album <strong>(American Dream, 2017)</strong> from our lead singer <strong id="strong-color">Eric Burdon</strong>.
 
                     </p>
+                    <br>
                     <p>
                         <strong id="strong-color">The Animals</strong> are currently in studio, working on a new album to be released in <strong> 2018</strong>. We hope to update this section soon with some of our brand new material.
                     </p>
@@ -65,67 +66,67 @@
 
                 </div>
             </div>
-            <div   class="col-xs-12 col-sm-12 col-md-8 bg-color-music section-column">
+            <div class="col-xs-12 col-sm-12 col-md-8 bg-color-music section-column">
                 <div class="row">
                     <div class="col-md-12">
                         <h5 class="section-heading-music uppercase">Songs from our back catalogue</h5>
                     </div>
                 </div>
                 <div class="row audio-styles">
-                    <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4">
+                    <div id="pad-none" class="col-xs-6 col-sm-4 col-md-4">
                         <figure>
-                            <img class="image-style" src="assets/images/a-blue.jpeg" alt="Picture of Eric Burden" />
-                            <audio controls class="audio-bar">
+                            <img class="image-style grow" src="assets/images/a-classy.jpg" alt="Picture of The Animals band" />
+                            <audio controls class="audio-bar grow">
                              <source src="/assets/audio/02.Don't Let Me Be Misunderstood.ogg" type="audio/ogg" >
                              <source src="/assets/audio/02.Don't Let Me Be Misunderstood.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
                     </div>
-                    <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4 hidden-xs">
+                    <div id="pad-none" class="col-xs-6 col-sm-4 col-md-4 hidden-xs">
                         <figure>
-                            <img class="image-style" src="assets/images/a-classy.jpg" alt="Picture of The Animals Band" />
-                            <audio controls class="audio-bar">
+                            <img class="image-style grow" src="assets/images/a-iconic.jpg" alt="Picture of The Animals Band" />
+                            <audio controls class="audio-bar grow">
                              <source src="/assets/audio/19.It's My Life.mp3.ogg" type="audio/ogg" >
                              <source src="/assets/audio/19.It's My Life.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
                     </div>
-                    <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4">
+                    <div id="pad-none" class="col-xs-6 col-sm-4 col-md-4">
                         <figure>
-                            <img class="image-style" src="assets/images/a-army.jpeg" alt="Picture of Eric Burden" />
-                            <audio controls class="audio-bar">
+                            <img class="image-style grow" src="assets/images/a-logo-orange.jpeg" alt="Picture of The Animals Band" />
+                            <audio controls class="audio-bar grow">
                              <source src="/assets/audio/01.Memphis Tennessee.ogg" type="audio/ogg" >
                              <source src="/assets/audio/01.Memphis Tennessee.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
                     </div>
-                    <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4 hidden-xs">
+                    <div id="pad-none" class="col-xs-6 col-sm-4 col-md-4 ">
                         <figure>
-                            <img class="image-style" src="assets/images/a-delish.jpg" alt="Picture of Eric Burden" />
-                            <audio controls class="audio-bar">
+                            <img class="image-style grow" src="assets/images/a-delish.jpg" alt="Picture of The Animals Band" />
+                            <audio controls class="audio-bar grow">
                              <source src="/assets/audio/16.I'm Crying.ogg" type="audio/ogg" >
                              <source src="/assets/audio/16.I'm Crying.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
                     </div>
-                    <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4">
+                    <div id="pad-none" class="col-xs-6 col-sm-4 col-md-4">
                         <figure>
-                            <img class="image-style" src="assets/images/a-portrait.jpeg" alt="Picture of Eric Burden" />
-                            <audio controls class="audio-bar">
+                            <img class="image-style grow" src="assets/images/a-portrait.jpeg" alt="Picture of The Animals Band" />
+                            <audio controls class="audio-bar grow">
                              <source src="/assets/audio/04.Roadrunner.ogg" type="audio/ogg" >
                              <source src="/assets/audio/04.Roadrunner.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
                     </div>
-                    <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4">
+                    <div id="pad-none" class="col-xs-6 col-sm-4 col-md-4 hidden-xs">
                         <figure>
-                            <img class="image-style" src="assets/images/a-jail.jpg" alt="Picture of Eric Burden" />
-                            <audio controls class="audio-bar">
+                            <img class="image-style grow" src="assets/images/a-jail.jpg" alt="Picture of Eric Burden" />
+                            <audio controls class="audio-bar grow">
                              <source src="/assets/audio/07.Baby What's Wrong.ogg" type="audio/ogg" >
                              <source src="/assets/audio/07.Baby What's Wrong.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
@@ -149,7 +150,7 @@
                 <h6 class="uppercase general-styles">Pricelist & Schedule</h6>
 
                 <p class="inline-block font-style">Here is a list of our prices and availability throughout the year. Please click on the link
-                    <a class="list-pdf" <a href="assets/documents/pricelist.pdf" target="_blank" ><i class="fa fa-download" aria-hidden="true"></i></a>
+                    <a class="list-pdf" <a href="assets/documents/pricelist.pdf" target="_blank"><i class="fa fa-download" aria-hidden="true"></i></a>
                 </p>
             </div>
             <div class="col-sm-4">
