Changed background color of audio bars on the music page to white.Removed the grow feature on the images on the music page

--- a/music.html
+++ b/music.html
@@ -75,7 +75,7 @@
                 <div class="row audio-styles">
                     <div id="pad-none" class="col-xs-6 col-sm-4 col-md-4">
                         <figure>
-                            <img class="image-style grow" src="assets/images/a-classy.jpg" alt="Picture of The Animals band" />
+                            <img class="image-style" src="assets/images/a-classy.jpg" alt="Picture of The Animals band" />
                             <audio controls class="audio-bar grow">
                              <source src="/assets/audio/02.Don't Let Me Be Misunderstood.ogg" type="audio/ogg" >
                              <source src="/assets/audio/02.Don't Let Me Be Misunderstood.mp3" type="audio/mpeg" >
@@ -85,7 +85,7 @@
                     </div>
                     <div id="pad-none" class="col-xs-6 col-sm-4 col-md-4 hidden-xs">
                         <figure>
-                            <img class="image-style grow" src="assets/images/a-iconic.jpg" alt="Picture of The Animals Band" />
+                            <img class="image-style" src="assets/images/a-iconic.jpg" alt="Picture of The Animals Band" />
                             <audio controls class="audio-bar grow">
                              <source src="/assets/audio/19.It's My Life.mp3.ogg" type="audio/ogg" >
                              <source src="/assets/audio/19.It's My Life.mp3" type="audio/mpeg" >
@@ -95,7 +95,7 @@
                     </div>
                     <div id="pad-none" class="col-xs-6 col-sm-4 col-md-4">
                         <figure>
-                            <img class="image-style grow" src="assets/images/a-logo-orange.jpeg" alt="Picture of The Animals Band" />
+                            <img class="image-style " src="assets/images/a-logo-orange.jpeg" alt="Picture of The Animals Band" />
                             <audio controls class="audio-bar grow">
                              <source src="/assets/audio/01.Memphis Tennessee.ogg" type="audio/ogg" >
                              <source src="/assets/audio/01.Memphis Tennessee.mp3" type="audio/mpeg" >
@@ -105,7 +105,7 @@
                     </div>
                     <div id="pad-none" class="col-xs-6 col-sm-4 col-md-4 ">
                         <figure>
-                            <img class="image-style grow" src="assets/images/a-delish.jpg" alt="Picture of The Animals Band" />
+                            <img class="image-style" src="assets/images/a-delish.jpg" alt="Picture of The Animals Band" />
                             <audio controls class="audio-bar grow">
                              <source src="/assets/audio/16.I'm Crying.ogg" type="audio/ogg" >
                              <source src="/assets/audio/16.I'm Crying.mp3" type="audio/mpeg" >
@@ -115,7 +115,7 @@
                     </div>
                     <div id="pad-none" class="col-xs-6 col-sm-4 col-md-4">
                         <figure>
-                            <img class="image-style grow" src="assets/images/a-portrait.jpeg" alt="Picture of The Animals Band" />
+                            <img class="image-style" src="assets/images/a-portrait.jpeg" alt="Picture of The Animals Band" />
                             <audio controls class="audio-bar grow">
                              <source src="/assets/audio/04.Roadrunner.ogg" type="audio/ogg" >
                              <source src="/assets/audio/04.Roadrunner.mp3" type="audio/mpeg" >
@@ -125,7 +125,7 @@
                     </div>
                     <div id="pad-none" class="col-xs-6 col-sm-4 col-md-4 hidden-xs">
                         <figure>
-                            <img class="image-style grow" src="assets/images/a-jail.jpg" alt="Picture of Eric Burden" />
+                            <img class="image-style" src="assets/images/a-jail.jpg" alt="Picture of Eric Burden" />
                             <audio controls class="audio-bar grow">
                              <source src="/assets/audio/07.Baby What's Wrong.ogg" type="audio/ogg" >
                              <source src="/assets/audio/07.Baby What's Wrong.mp3" type="audio/mpeg" >
