Changed a user story on contacts page, added a new image, deleted unused images

--- a/customers.html
+++ b/customers.html
@@ -99,12 +99,12 @@
                     <div class="col-xs-12 col-sm-6 col-md-6 hidden-xs">
                         <div class="media">
                             <div class="media-left">
-                                <img src="assets/images/jordan-peterson.jpg" alt="Image of Jordan Peterson" class="img-circle media-object shadow-box" height=100 width=100>
+                                <img src="assets/images/Maajid.jpeg" alt="Image of Maajid Nawaz" class="img-circle media-object shadow-box" height=100 width=100>
                             </div>
                             <div class="media-body">
                                 <blockquote class="band-customers-item">
                                     <p>Absolutely amazing, they had everyone on the dance floor all night, great fun had by all, we really enjoyed the crowd participation bits. Great band, great songs.</p>
-                                    <p><strong>Jordan Peterson</strong><a class="social-links-quotes" href="https://twitter.com/jordanbpeterson
+                                    <p><strong>Maajid Nawaz</strong><a class="social-links-quotes" href="https://twitter.com/MaajidNawaz
                                        " target="_blank"><i class="fa fa-twitter"></i></a></p>
                                 </blockquote>
                             </div>
