--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 <div class="row contact-styles">
                     <div>
                         <h3 class="section-heading-contact uppercase text-center">Got a special event coming up?</h3>
-                        <h5 class="uppercase text-center">Make a booking here</h5>
+                        <h5 class="uppercase text-center"><a href="assets/documents/pricelist.pdf" target="_blank">Make a booking request below</a></h5>
                     </div>
                     <div class="center-form">
                         <form>
