Removed bitly URL shortners and included direct links instead

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
             <div class="col-sm-4">
                 <h6 class="uppercase general-styles">About us</h6>
 
-                <p class="inline-block font-style"><a class="wiki-link" href="http://bit.ly/2CqYnai" target="_blank">Legendary</a> rock and roll & rhythm and blues band, 50+ years experience, with a back catalogue of original classic hits.
+                <p class="inline-block font-style"><a class="wiki-link" href="https://en.wikipedia.org/wiki/The_Animals" target="_blank">Legendary</a> rock and roll & rhythm and blues band, 50+ years experience, with a back catalogue of original classic hits.
                 </p>
 
             </div>
@@ -83,9 +83,9 @@
                 <h6 id="social" class="uppercase general-styles">Social</h6>
                 <div class="inline-block font-style">
                     <ul class="list-inline social-links">
-                        <li><a href="http://bit.ly/2sZ9H9B" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="http://bit.ly/2GNhlpw" target="_blank"><i class="fa fa-youtube"></i></a></li>
-                        <li><a href="http://bit.ly/2ClugRv" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://www.facebook.com/TheAnimalsMusic/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.youtube.com/results?search_query=the+animals+" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                        <li><a href="https://twitter.com/ericburdon?lang=en" target="_blank"><i class="fa fa-twitter"></i></a></li>
                     </ul>
                 </div>
             </div>
