Added a keyframe animation to the logo on the index page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <header class="container-fluid">
         <div class="row">
             <a href="index.html">
-                <div class="col-md-4 logo"> </div>
+                <div class="col-md-4 index-logo">
+                </div>
             </a>
             <div class="col-md-8 picture-main">
                 <div id="navbar" class="row">
@@ -99,7 +100,7 @@
                 <h6 id="social" class="uppercase general-styles">Social</h6>
                 <div class="inline-block font-style">
                     <ul class="list-inline social-links">
-                       <li><a href="https://www.facebook.com/TheAnimalsMusic/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/TheAnimalsMusic/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://www.youtube.com/results?search_query=the+animals+" target="_blank"><i class="fa fa-youtube"></i></a></li>
                         <li><a href="https://twitter.com/ericburdon?lang=en" target="_blank"><i class="fa fa-twitter"></i></a></li>
                     </ul>
