Added some explanatory comments for the different sections on each page

--- a/customers.html
+++ b/customers.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <!-- Stylesheets & Libraries -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
@@ -13,9 +14,12 @@
 <body>
     <header class="container-fluid">
         <div class="row">
+            <!-- Main Logo -->
             <a href="index.html">
-                <div class="col-md-4 logo"> </div>
+                <div class="col-md-4 logo">
+                </div>
             </a>
+            <!-- Navbar -->
             <div class="col-md-8 picture-customers">
                 <div id="navbar" class="row">
                     <ul id="nav-list" class="list-inline clearfix">
@@ -37,8 +41,10 @@
             </div>
         </div>
     </header>
+
     <section class="container-fluid">
         <div class="row">
+            <!-- Animal Charity Info -->
             <div class="col-xs-12 col-sm-12 col-md-4 bg-color-customers-info section-column">
                 <div class="row">
                     <div class="col-md-12">
@@ -59,6 +65,7 @@
                     </p>
                 </div>
             </div>
+            <!-- Previous Customers Info -->
             <div class="col-xs-12 col-sm-12 col-md-8 bg-color-customers section-column">
                 <div class="row">
                     <div class="col-md-12">
@@ -110,11 +117,11 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
     </section>
+    <!-- Footer -->
     <footer class="container-fluid">
         <div id="footer-margin" class="row">
             <div class="col-sm-4">
@@ -135,7 +142,7 @@
                 <h6 id="social" class="uppercase general-styles">Social</h6>
                 <div class="inline-block font-style">
                     <ul class="list-inline social-links">
-                       <li><a href="https://www.facebook.com/TheAnimalsMusic/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/TheAnimalsMusic/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://www.youtube.com/results?search_query=the+animals+" target="_blank"><i class="fa fa-youtube"></i></a></li>
                         <li><a href="https://twitter.com/ericburdon?lang=en" target="_blank"><i class="fa fa-twitter"></i></a></li>
                     </ul>
