--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <!-- Stylesheets & Libraries -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
@@ -13,10 +14,12 @@
 <body>
     <header class="container-fluid">
         <div class="row">
+             <!-- Main Logo -->
             <a href="index.html">
                 <div class="col-md-4 index-logo">
                 </div>
             </a>
+            <!-- Navbar -->
             <div class="col-md-8 picture-main">
                 <div id="navbar" class="row">
                     <ul id="nav-list" class="list-inline clearfix">
@@ -38,6 +41,7 @@
             </div>
         </div>
     </header>
+    <!-- Band Info -->
     <section class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-4 bg-color-band-info section-column">
@@ -59,6 +63,7 @@
                     <p>So book us for a show, you will be glad you did!</p>
                 </div>
             </div>
+            <!-- Video Section -->
             <div class="col-xs-12 col-sm-12 col-md-8 bg-color-home section-column">
                 <div class="row">
                     <div class="col-md-12">
@@ -80,6 +85,7 @@
             </div>
         </div>
     </section>
+    <!-- Footer -->
     <footer class="container-fluid">
         <div id="footer-margin" class="row">
             <div class="col-sm-4">
