--- a/music.html
+++ b/music.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <!-- Stylesheets & Libraries -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
@@ -13,9 +14,12 @@
 <body>
     <header class="container-fluid">
         <div class="row">
+            <!-- Main Logo -->
             <a href="index.html">
-                <div class="col-md-4 logo"> </div>
+                <div class="col-md-4 logo">
+                </div>
             </a>
+            <!-- Navbar -->
             <div class="col-md-8 picture-music">
                 <div id="navbar" class="row">
                     <ul id="nav-list" class="list-inline clearfix">
@@ -37,8 +41,10 @@
             </div>
         </div>
     </header>
+    
     <section class="container-fluid">
         <div class="row">
+            <!-- Band Info -->
             <div class="col-xs-12 col-sm-12 col-md-4 bg-color-music-info section-column">
                 <div class="row">
                     <div class="col-md-12">
@@ -66,6 +72,7 @@
 
                 </div>
             </div>
+            <!-- Audio Section -->
             <div class="col-xs-12 col-sm-12 col-md-8 bg-color-music section-column">
                 <div class="row">
                     <div class="col-md-12">
@@ -137,6 +144,7 @@
             </div>
         </div>
     </section>
+    <!-- Footer -->
     <footer class="container-fluid">
         <div id="footer-margin" class="row">
             <div class="col-sm-4">
