--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <!-- Stylesheets & Libraries -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
@@ -13,9 +14,12 @@
 <body>
     <header class="container-fluid">
         <div class="row">
+            <!-- Main Logo -->
             <a href="index.html">
-                <div class="col-md-4 logo"> </div>
+                <div class="col-md-4 logo">
+                </div>
             </a>
+            <!-- Navbar -->
             <div class="col-md-8 picture-contact">
                 <div id="navbar" class="row">
                     <ul id="nav-list" class="list-inline clearfix">
@@ -31,12 +35,12 @@
                         <li id="border-contact" class="col-xs-6 col-sm-3 ui-menu-color-contact menuitem">
                             <a href="contact.html" class="hvr-rectangle-out"><i class="fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span></a>
                         </li>
-
                     </ul>
                 </div>
             </div>
         </div>
     </header>
+     <!-- Booking Section -->
     <section class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-4 bg-color-contact-info section-column">
@@ -63,18 +67,16 @@
             </div>
         </div>
     </section>
+    <!-- Footer -->
     <footer class="container-fluid">
         <div id="footer-margin" class="row">
             <div class="col-sm-4">
                 <h6 class="uppercase general-styles">About us</h6>
-
                 <p class="inline-block font-style"><a class="wiki-link" href="https://en.wikipedia.org/wiki/The_Animals" target="_blank">Legendary</a> rock and roll & rhythm and blues band, 50+ years experience, with a back catalogue of original classic hits.
                 </p>
-
             </div>
             <div class="col-sm-4">
                 <h6 class="uppercase general-styles">Pricelist & Schedule</h6>
-
                 <p class="inline-block font-style">Here is a list of our prices and availability throughout the year. Please click on the link
                     <a class="list-pdf" <a href="assets/documents/pricelist.pdf" target="_blank"><i class="fa fa-download" aria-hidden="true"></i></a>
                 </p>
@@ -90,7 +92,6 @@
                 </div>
             </div>
         </div>
-
     </footer>
 
 </body>
