Fixed a broken link on the customers page for Gabor Mates Twitter account, it is now working correctly. Changed a link for Eric Burdons solo album from a bitly URL shortener to a full URL on the music page.

--- a/customers.html
+++ b/customers.html
@@ -96,8 +96,7 @@
                             <div class="media-body">
                                 <blockquote class="band-customers-item">
                                     <p>I would like to thank The Animals for playing at my 70th birthday party. Eric & the guys were so interactive, our guests loved it, and what a fabulous singer! </p>
-                                    <p><strong>Gabor Mate</strong><a class="social-links-quotes" href="https://twitter.com/DrMate
-                                       " target="_blank"><i class="fa fa-twitter"></i></a></p>
+                                    <p><strong>Gabor Mate</strong><a class="social-links-quotes" href="https://twitter.com/drgabormate" target="_blank"><i class="fa fa-twitter"></i></a></p>
                                 </blockquote>
                             </div>
                         </div>
