--- a/music.html
+++ b/music.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="band-music-item">
-                    <a href="http://bit.ly/2tlWSGS" target="_blank"><img class="picture-music-info" 
+                    <a href="https://www.youtube.com/watch?v=X7RKDEoV1aw&list=PLNJCcTfdfjYpjc-ZZQ6PNKgmkB9duFsNH" target="_blank"><img class="picture-music-info" 
                     src="assets/images/eric-burdon-1.jpeg" alt="picture of Eric Burden" 
                    /></a>
 
