Issue with audio tracks not loading on the website deployed to github pages. Delted all spaces between audio.mp3 song titles and removed all instances of %20 from the URls on the music pages

--- a/music.html
+++ b/music.html
@@ -96,8 +96,8 @@
                         <figure>
                             <img class="image-style" src="assets/images/a-classy.jpg" alt="Picture of The Animals band" />
                             <audio controls class="audio-bar grow">
-                             <source src="/assets/audio/02.Don't%20Let%20Me%20Be%20Misunderstood.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/02.Don't%20Let%20Me%20Be%20Misunderstood.mp3" type="audio/mpeg" >
+                             <source src="/assets/audio/02.Don'tLetMeBeMisunderstood.ogg" type="audio/ogg" >
+                             <source src="/assets/audio/02.Don'tLetMeBeMisunderstood.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
@@ -106,8 +106,8 @@
                         <figure>
                             <img class="image-style" src="assets/images/a-iconic.jpg" alt="Picture of The Animals Band" />
                             <audio controls class="audio-bar grow">
-                             <source src="/assets/audio/19.It's%20My%20Life.mp3.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/19.It's%20My%20Life.mp3" type="audio/mpeg" >
+                             <source src="/assets/audio/19.It'sMyLife.mp3.ogg" type="audio/ogg" >
+                             <source src="/assets/audio/19.It'sMyLife.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
@@ -116,8 +116,8 @@
                         <figure>
                             <img class="image-style " src="assets/images/a-logo-orange.jpeg" alt="Picture of The Animals Band" />
                             <audio controls class="audio-bar grow">
-                             <source src="/assets/audio/01.Memphis%20Tennessee.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/01.Memphis%20Tennessee.mp3" type="audio/mpeg" >
+                             <source src="/assets/audio/01.MemphisTennessee.ogg" type="audio/ogg" >
+                             <source src="/assets/audio/01.MemphisTennessee.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
@@ -126,8 +126,8 @@
                         <figure>
                             <img class="image-style" src="assets/images/a-delish.jpg" alt="Picture of The Animals Band" />
                             <audio controls class="audio-bar grow">
-                             <source src="/assets/audio/16.I'm%20Crying.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/16.I'm%20Crying.mp3" type="audio/mpeg" >
+                             <source src="/assets/audio/16.I'mCrying.ogg" type="audio/ogg" >
+                             <source src="/assets/audio/16.I'mCrying.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
@@ -146,8 +146,8 @@
                         <figure>
                             <img class="image-style" src="assets/images/a-jail.jpg" alt="Picture of Eric Burden" />
                             <audio controls class="audio-bar grow">
-                             <source src="/assets/audio/07.Baby%20What's%20Wrong.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/07.Baby%20What's%20Wrong.mp3" type="audio/mpeg" >
+                             <source src="/assets/audio/07.BabyWhat'sWrong.ogg" type="audio/ogg" >
+                             <source src="/assets/audio/07.BabyWhat'sWrong.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
