Audio files not working on github pages, returning  404 error. Testing path to src

--- a/music.html
+++ b/music.html
@@ -96,8 +96,8 @@
                         <figure>
                             <img class="image-style" src="assets/images/a-classy.jpg" alt="Picture of The Animals band" />
                             <audio controls class="audio-bar grow">
-                             <source src="/assets/audio/02.Don'tLetMeBeMisunderstood.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/02.Don'tLetMeBeMisunderstood.mp3" type="audio/mpeg" >
+                             <source src="../assets/audio/02.Don'tLetMeBeMisunderstood.ogg" type="audio/ogg" >
+                             <source src="../assets/audio/02.Don'tLetMeBeMisunderstood.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
@@ -116,8 +116,8 @@
                         <figure>
                             <img class="image-style " src="assets/images/a-logo-orange.jpeg" alt="Picture of The Animals Band" />
                             <audio controls class="audio-bar grow">
-                             <source src="/assets/audio/01.MemphisTennessee.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/01.MemphisTennessee.mp3" type="audio/mpeg" >
+                             <source src="./assets/audio/01.MemphisTennessee.ogg" type="audio/ogg" >
+                             <source src="./assets/audio/01.MemphisTennessee.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
