Error found and resolved, src path was missing a '.'

--- a/music.html
+++ b/music.html
@@ -96,8 +96,8 @@
                         <figure>
                             <img class="image-style" src="assets/images/a-classy.jpg" alt="Picture of The Animals band" />
                             <audio controls class="audio-bar grow">
-                             <source src="../assets/audio/02.Don'tLetMeBeMisunderstood.ogg" type="audio/ogg" >
-                             <source src="../assets/audio/02.Don'tLetMeBeMisunderstood.mp3" type="audio/mpeg" >
+                             <source src="./assets/audio/02.Don'tLetMeBeMisunderstood.ogg" type="audio/ogg" >
+                             <source src="./assets/audio/02.Don'tLetMeBeMisunderstood.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
@@ -106,8 +106,8 @@
                         <figure>
                             <img class="image-style" src="assets/images/a-iconic.jpg" alt="Picture of The Animals Band" />
                             <audio controls class="audio-bar grow">
-                             <source src="/assets/audio/19.It'sMyLife.mp3.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/19.It'sMyLife.mp3" type="audio/mpeg" >
+                             <source src="./assets/audio/19.It'sMyLife.mp3.ogg" type="audio/ogg" >
+                             <source src="./assets/audio/19.It'sMyLife.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
@@ -126,8 +126,8 @@
                         <figure>
                             <img class="image-style" src="assets/images/a-delish.jpg" alt="Picture of The Animals Band" />
                             <audio controls class="audio-bar grow">
-                             <source src="/assets/audio/16.I'mCrying.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/16.I'mCrying.mp3" type="audio/mpeg" >
+                             <source src="./assets/audio/16.I'mCrying.ogg" type="audio/ogg" >
+                             <source src="./assets/audio/16.I'mCrying.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
@@ -136,8 +136,8 @@
                         <figure>
                             <img class="image-style" src="assets/images/a-portrait.jpeg" alt="Picture of The Animals Band" />
                             <audio controls class="audio-bar grow">
-                             <source src="/assets/audio/04.Roadrunner.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/04.Roadrunner.mp3" type="audio/mpeg" >
+                             <source src="./assets/audio/04.Roadrunner.ogg" type="audio/ogg" >
+                             <source src="./assets/audio/04.Roadrunner.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
@@ -146,8 +146,8 @@
                         <figure>
                             <img class="image-style" src="assets/images/a-jail.jpg" alt="Picture of Eric Burden" />
                             <audio controls class="audio-bar grow">
-                             <source src="/assets/audio/07.BabyWhat'sWrong.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/07.BabyWhat'sWrong.mp3" type="audio/mpeg" >
+                             <source src="./assets/audio/07.BabyWhat'sWrong.ogg" type="audio/ogg" >
+                             <source src="./assets/audio/07.BabyWhat'sWrong.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
