--- a/music.html
+++ b/music.html
@@ -106,7 +106,7 @@
                         <figure>
                             <img class="image-style" src="assets/images/a-iconic.jpg" alt="Picture of The Animals Band" />
                             <audio controls class="audio-bar grow">
-                             <source src="./assets/audio/19.It'sMyLife.mp3.ogg" type="audio/ogg" >
+                             <source src="./assets/audio/19.It'sMyLife.ogg" type="audio/ogg" >
                              <source src="./assets/audio/19.It'sMyLife.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
